5-clusterIP-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: identity
spec:
  selector:
    app: keycloak
  ports:
    - name: http
      port: 80
      targetPort: 8095
  type: ClusterIP
