6-headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-headless
  namespace: identity
spec:
  clusterIP: None
  selector:
    app: keycloak
  ports:
    - name: jgroups               # not used by DNS itself, but keeps the Service valid
      port: 7800
      targetPort: 7800
